--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "7.0.0",
+    "@babel/register": "7.0.0",
     "@vue/cli-plugin-babel": "^4.4.0",
     "@vue/cli-plugin-eslint": "^4.4.0",
     "@vue/cli-plugin-pwa": "^4.4.0",
     "@vue/cli-service": "^4.4.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -32,9 +35,14 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "html-webpack-plugin": "3.2.0",
     "mockjs": "^1.1.0",
     "node-sass": "^4.12.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
+    "script-ext-html-webpack-plugin": "2.1.3",
+    "script-loader": "0.7.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
