--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
+    "view-design": "^4.3.1",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0",
